fix spacing bug with submit buttons on invoice form. Small improvement to checkVendorStatus functions

--- a/vsd-app/ClientApp/src/styles-font.scss
+++ b/vsd-app/ClientApp/src/styles-font.scss
@@ -315,9 +315,9 @@ input.form-control {
     position: relative;
     margin: 30px 0 15px;
 
-    .btn {
-        margin-left: 0 !important;
-    }
+    // .btn {
+    //     margin-left: 0 !important;
+    // }
 }
 
 .continue-btn {
